added the info buttons

--- a/public/modules/reports/views/view-report.client.view.html
+++ b/public/modules/reports/views/view-report.client.view.html
@@ -10,7 +10,7 @@
 						<i class="glyphicon glyphicon-trash"></i>
 					</a>
 				</div>
-				<md-button>
+				<md-button  class="md-raised">
 					Info
 				</md-button>
 				<div flex id="chart">
@@ -19,7 +19,7 @@
 			</md-tab>
 			<md-tab label="Box Plot">
 			<div flex id="chart">
-				<md-button>
+				<md-button  class="md-raised">
 					Info
 				</md-button>
 				<div class ="chartBorder">
@@ -28,15 +28,18 @@
 				</div>
 			</md-tab>
 			<md-tab label="Tree Plot">
-				<md-button>
+				<md-button  class="md-raised">
 					Info
 				</md-button>
 				<div tree-plot>
 				</div>
 			</md-tab>
 			<md-tab label="Normal Distubution">
-				<md-button>
+				<md-button  class="md-raised">
 					Info
+				</md-button>
+				<md-button  class="md-raised" ng-click="Show ">
+					Compare
 				</md-button>
 				<div normal-plot>
 				</div>
