--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -8,9 +8,9 @@
 
 			<md-list>
 				<md-list-item>
-					<md-button class="md-icon-button" aria-label="Use Android">
-						<md-icon md-svg-src="modules/projects/img/icons/right_arrow.svg" ng-show="!showEstimators" ng-click="toggleEstimatorsList()"> </md-icon>
-						<md-icon md-svg-src="modules/projects/img/icons/down_arrow.svg" ng-show="showEstimators" ng-click="toggleEstimatorsList()"> </md-icon>
+					<md-button class="md-icon-button" aria-label="Use Android" ng-click="toggleEstimatorsList()">
+						<md-icon md-svg-src="modules/projects/img/icons/right_arrow.svg" ng-show="!showEstimators"> </md-icon>
+						<md-icon md-svg-src="modules/projects/img/icons/down_arrow.svg" ng-show="showEstimators"> </md-icon>
 						<md-tooltip>Show/Hide Estimators</md-tooltip>
 					</md-button>
 					<h3>Estimators</h3>
