added the dialog box that is required to load a projects information

--- a/public/modules/reports/views/view-report.client.view.html
+++ b/public/modules/reports/views/view-report.client.view.html
@@ -35,7 +35,7 @@
 				</div>
 			</md-tab>
 			<md-tab label="Normal Distubution">
-				<md-button  class="md-raised">
+				<md-button  class="md-raised" ng-click="getInfoDialog($event,'/modules/reports/views/normalinfo.client.view.html')" >
 					Info
 				</md-button>
 				<md-button  class="md-raised" ng-click="Show ">
