Fixed bottom card shadows

--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="ProjectsController" data-ng-init="find();confirm = true">
-	<md-content>
+	<md-content class="paddingBottom">
 		<md-autocomplete 
 			ng-disabled="isDisabled"
 			md-no-cache="noCache"
