--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -105,8 +105,8 @@
 			<form name = "estimationForm">
 				<div>
 					<div ui-tree id="tree-root" data-drag-enabled="owner() && !isOpenForEstimation()">
-						<ol ui-tree-nodes ng-model="project.children">
-							<li ng-repeat="node in project.children" ui-tree-node ng-include="'nodes_renderer.html'"></li>
+						<ol ui-tree-nodes ng-model="project.children[0].nodes">
+							<li ng-repeat="node in project.children[0].nodes" ui-tree-node ng-include="'nodes_renderer.html'"></li>
 						</ol>
 					</div>
 				</div>
@@ -119,7 +119,7 @@
 				<md-button class = "md-primary" ng-click = "openForEstimation()" ng-show = "owner() && !isOpenForEstimation()">
 					Open for Estimation
 				</md-button>
-				<md-button class="md-primary" ng-click="addFeature()" ng-show = "owner()">
+				<md-button class="md-primary" ng-click="addFeature()" ng-show = "owner() && !isOpenForEstimation()">
 					Add Feature
 				</md-button>
 				<md-button class = "md-primary" ng-click = "submitEstimation()" ng-show = "!rootIsEmpty() && estimator() && !estimated && isOpenForEstimation()" ng-disabled = "estimationForm.$invalid">
