Readied the divider to an empty tree

--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -33,7 +33,7 @@
 				Edit Estimators
 			</md-button>
 
-			<md-divider ng-hide="project.children[0].nodes[0] == null"></md-divider>
+			<md-divider></md-divider>
 
 
 			<div ui-tree>
