--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -7,8 +7,8 @@
 			</md-input-container>
 
 			<md-list>
-				<md-list-item>
-					<md-button class="md-icon-button" aria-label="Use Android" ng-click="toggleEstimatorsList()">
+				<md-list-item ng-click="toggleEstimatorsList()">
+					<md-button class="md-icon-button" aria-label="Use Android">
 						<md-icon md-svg-src="modules/projects/img/icons/right_arrow.svg" ng-show="!showEstimators"> </md-icon>
 						<md-icon md-svg-src="modules/projects/img/icons/down_arrow.svg" ng-show="showEstimators"> </md-icon>
 						<md-tooltip>Show/Hide Estimators</md-tooltip>
@@ -35,8 +35,8 @@
 
 			<md-divider></md-divider>
 			<md-list>
-				<md-list-item>
-					<md-button class="md-icon-button" aria-label="Use Android" ng-click="showEstimation = !showEstimation">
+				<md-list-item ng-click="showEstimation = !showEstimation">
+					<md-button class="md-icon-button" aria-label="Use Android">
 						<md-icon md-svg-src="modules/projects/img/icons/right_arrow.svg" ng-show="!showEstimation"> </md-icon>
 						<md-icon md-svg-src="modules/projects/img/icons/down_arrow.svg" ng-show="showEstimation"> </md-icon>
 						<md-tooltip>Show/Hide Estimation</md-tooltip>
