Estimations renamed to Project Estimation Total

--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -41,7 +41,7 @@
 						<md-icon md-svg-src="modules/projects/img/icons/down_arrow.svg" ng-show="showEstimation"> </md-icon>
 						<md-tooltip>Show/Hide Estimation</md-tooltip>
 					</md-button>
-					<h3>Estimations</h3>
+					<h3>Project Estimation Total</h3>
 				</md-list-item>
 
 				<md-list-item class="md-2-line" ng-show="showEstimation">
