--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -135,7 +135,7 @@
 						</md-tooltip>
 						<md-icon md-svg-src="modules/projects/img/icons/info.svg"></md-icon>
 					</md-button>
-					<md-button class="md-icon-button" aria-label="Use Android" data-nodrag ng-click="showChatDialog($event, node)" ng-show="isOpenForEstimation()">
+					<md-button class="md-icon-button treeInput" aria-label="Use Android" data-nodrag ng-click="showChatDialog($event, node)" ng-show="isOpenForEstimation()">
 						<md-tooltip>
 							Discuss
 						</md-tooltip>
