Created temp project

--- a/public/modules/reports/views/list-reports.client.view.html
+++ b/public/modules/reports/views/list-reports.client.view.html
@@ -53,8 +53,11 @@
                     <md-button aria-label="View/Edit" class="md-button" ng-click="goTo('/reports/{{project._id}}')" flex>
                         View Report
                     </md-button>
-                    <md-button aria-label="View/Edit" class="md-button" ng-click="reopenEstimation(project)" ng-show="isOwner(project)" flex>
+                    <md-button aria-label="View/Edit" class="md-button" ng-click="reopenEstimation(project)" ng-show="isOwner(project) && !alreadyOpened(project)" flex>
                         Reopen for Estimation
+                    </md-button>
+                    <md-button aria-label="View/Edit" class="md-button" ng-disabled="true" ng-show="isOwner(project) && alreadyOpened(project)" flex>
+                        Already reopened
                     </md-button>
                 </md-card-content>
             </md-card>
