Projects can be reopened

--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -47,7 +47,7 @@
 								<md-icon md-svg-src="modules/projects/img/icons/person.svg"></md-icon>
 							</md-button>
 							<div style="padding: 10px; white-space: nowrap; overflow:hidden" class="md-toolbar-tools">
-								<h3>{{project.name}}</h3>
+								<h3>{{project.name}} round: {{ project.round }}</h3>
 								<md-tooltip>{{project.name}}</md-tooltip>
 
 							</div>
