Changed card info display

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -1,6 +1,6 @@
 <md-toolbar class="md-whiteframe-z2" data-ng-controller="HeaderController" flex>
 	<div class="md-toolbar-tools mainToolbar" >
-		<md-button class="md-icon-button" aria-label="Settings" ng-click="toggleLeft()" hide-gt-md>
+		<md-button class="md-icon-button" aria-label="Settings" ng-click="toggleLeft()" hide-lg>
 			<md-icon md-svg-src="modules/core/img/icons/menu.svg" class="darkIcon" aria-label="Cake"></md-icon>
 		</md-button>
 		<span flex>{{getHeaderPath()}}</span>
