--- a/public/modules/sidenav/views/sidenav.client.view.html
+++ b/public/modules/sidenav/views/sidenav.client.view.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="SidenavController" class = "sidenav">
-	<md-sidenav class="md-sidenav-left md-whiteframe-z2 sidenav coloredBackground" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')"
+	<md-sidenav class="md-sidenav-left md-whiteframe-z2 sidenav coloredBackground" md-component-id="left" md-is-locked-open="$mdMedia('lg')"
 	>
 		<md-content class="coloredBackground">
 			<md-toolbar>
