--- a/public/modules/projects/css/projects.css
+++ b/public/modules/projects/css/projects.css
@@ -124,3 +124,11 @@ input::-webkit-inner-spin-button {
 	-webkit-appearance: none;
 	margin: 0;
 }
+
+.projectListInfo {
+	height: 10% !important;
+}
+
+.cardProgressBar {
+	margin-top: 10px;
+}
