--- a/public/modules/reports/views/list-reports.client.view.html
+++ b/public/modules/reports/views/list-reports.client.view.html
@@ -41,7 +41,7 @@
 					<md-toolbar class="cardHeader">
 						<div class="md-toolbar-tools">
 							<div style="padding: 10px; white-space: nowrap; overflow:hidden" class="md-toolbar-tools">
-								<h3>{{project.name}}</h3>
+								<h3>{{project.name}} round {{ project.project.round }}</h3>
 								<md-tooltip>{{project.name}}</md-tooltip>
 							</div>
 							<md-button aria-label="Delete" class="md-icon-button">
