--- a/public/modules/reports/views/normalcompare.client.view.html
+++ b/public/modules/reports/views/normalcompare.client.view.html
@@ -32,7 +32,7 @@
               </span>
               <span class="item-metadata">
                   <span class="item-metastat">
-                      {{item.description}}
+                      Round {{item.project.round}}
                   </span>
               </span>
           </md-item-template>
