--- a/public/modules/reports/views/normalinfo.client.view.html
+++ b/public/modules/reports/views/normalinfo.client.view.html
@@ -12,7 +12,7 @@
   <md-dialog-content style="max-width:800px;max-height:810px; ">
     <div>
       <p>
-        This section will guide you to understand how to interprite the results of the Normal distrubution.
+        This section will guide you to understand how to interpret the results of the Normal distrubution.
         The delphi wide-band method states that if a estimation lies between 10% to 20% the estimation converges well.
         Any value below 10% indicates that there is no clear consensus on the project.
       </p>
