Initial work on organisation
Backend still needs updating and some frontend changes are still
required

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -7,5 +7,8 @@
 		<md-button class="md-fab" style="positon: absolute; left: -25pt; top: 23pt; z-index: 200 !important;" aria-label="Go to project page" ng-click="goTo('projects/create')" ng-show = "onProjects()">
 			<md-icon md-svg-src="modules/core/img/icons/add.svg"></md-icon>
 		</md-button>
+		<md-button class="md-fab" style="positon: absolute; left: -25pt; top: 23pt; z-index: 200 !important;" aria-label="Go to organisation page" ng-click="goTo('organisations/create')" ng-show = "onOrganisations()">
+			<md-icon md-svg-src="modules/core/img/icons/add.svg"></md-icon>
+		</md-button>
 	</div>
 </md-toolbar>
