Stuff be working!
Projects are linked to organisations now

--- a/public/modules/projects/views/create-project.client.view.html
+++ b/public/modules/projects/views/create-project.client.view.html
@@ -17,9 +17,9 @@
 
 				<md-input-container>
 					<label>Organisation</label>
-					<md-select ng-model="userOrganisations">
-						<md-option ng-repeat="organisation in userOrganisations" value="{{organisation.name}}">
-							{{organisation.name}}
+					<md-select ng-model="projectOrganisation">
+						<md-option ng-repeat="organisation in userOrganisations" value="{{organisation}}">
+							{{organisation}}
 						</md-option>
 					</md-select>
 				</md-input-container>
