--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -7,6 +7,9 @@
 			<p>
 			The best project estimation system to date. Delivering your project on time, every time.
 			</p>
+			<div class="wrapper">
+				<ng-pdf template-url="/partials/viewer.html"></ng-pdf>
+			</div>
 		</md-card-content>
 	</md-card>
 </div>
